--- a/admin-panel/src/index.scss
+++ b/admin-panel/src/index.scss
@@ -138,6 +138,17 @@ input:-webkit-autofill:active {
                         }
                     }
                 }
+                &.settings_btn_wrap {
+                    margin-left: auto;
+                    button {
+                        width: 2.7rem;
+                        padding: 0.4rem;
+                        height: 2.7rem;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                    }
+                }
             }
         }
     }
@@ -311,12 +322,13 @@ input:-webkit-autofill:active {
                         font-size: 1.4rem;
                         font-weight: 400;
                         border: none;
-                        outline: none;
                         background-color: #fefefe;
                         height: 3.6rem;
                         border-radius: 0.8rem;
                         padding: 0 1rem;
                         text-transform: capitalize;
+                        overflow: hidden;
+                        text-overflow: ellipsis;
 
                         &.active {
                             font-weight: 600;
@@ -342,6 +354,13 @@ input:-webkit-autofill:active {
             @media (max-width: 1199px) {
                 max-width: 100%;
                 padding-left: 0;
+            }
+
+            .app_ui_content_loader {
+                height: 100%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
             }
 
             .app_ui_content_header {
@@ -387,28 +406,45 @@ input:-webkit-autofill:active {
                     }
                 }
 
-                .show_ts {
-                    margin: 0 0 0 auto;
+                &_right {
+                    margin-left: auto;
                     display: flex;
                     align-items: center;
 
-                    input[type="checkbox"] {
-                        appearance: none;
-                        width: 1.8rem;
-                        height: 1.8rem;
-                        border-radius: 0.4rem;
-                        background-color: $white;
-                        border: 1px solid #E5EAEA;
-                        cursor: pointer;
-
-                        &:checked {
-                            background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" id="check"><path fill="%234C0C0C" d="M18.71,7.21a1,1,0,0,0-1.42,0L9.84,14.67,6.71,11.53A1,1,0,1,0,5.29,13l3.84,3.84a1,1,0,0,0,1.42,0l8.16-8.16A1,1,0,0,0,18.71,7.21Z"></path></svg>');
+                    >* {
+                        &:not(:last-child) {
+                            &::after {
+                                content: "";
+                                width: 0.1rem;
+                                height: 2rem;
+                                background-color: $border;
+                                margin-inline: 1rem;
+                            }
                         }
                     }
 
-                    label {
-                        font-size: 1.4rem;
-                        margin-left: 0.8rem;
+                    .show_ts {
+                        display: flex;
+                        align-items: center;
+
+                        input[type="checkbox"] {
+                            appearance: none;
+                            width: 1.8rem;
+                            height: 1.8rem;
+                            border-radius: 0.4rem;
+                            background-color: $white;
+                            border: 1px solid #E5EAEA;
+                            cursor: pointer;
+
+                            &:checked {
+                                background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" id="check"><path fill="%234C0C0C" d="M18.71,7.21a1,1,0,0,0-1.42,0L9.84,14.67,6.71,11.53A1,1,0,1,0,5.29,13l3.84,3.84a1,1,0,0,0,1.42,0l8.16-8.16A1,1,0,0,0,18.71,7.21Z"></path></svg>');
+                            }
+                        }
+
+                        label {
+                            font-size: 1.4rem;
+                            margin-left: 0.8rem;
+                        }
                     }
                 }
             }
