--- a/frontend-from-admin-panel/src/index.scss
+++ b/frontend-from-admin-panel/src/index.scss
@@ -277,6 +277,8 @@ input:-webkit-autofill:active {
             position: sticky;
             overflow: auto;
             top: 2rem;
+            display: flex;
+            flex-direction: column;
 
             @media (max-width: 1199px) {
                 position: fixed;
@@ -308,6 +310,13 @@ input:-webkit-autofill:active {
                     &:focus {
                         border-color: $baseclr;
                     }
+                }
+            }
+
+            .app_ui_sidebar_list {
+                &:has(+.app_ui_sidebar_image) {
+                    max-height: calc(100% - 174px);
+                    overflow: auto;
                 }
             }
 
@@ -343,6 +352,18 @@ input:-webkit-autofill:active {
                             }
                         }
                     }
+                }
+            }
+
+            .app_ui_sidebar_image {
+
+                // position: sticky;
+                // bottom: 0;
+                img {
+                    width: 100%;
+                    height: 100px;
+                    object-fit: contain;
+                    object-position: center;
                 }
             }
         }
@@ -456,6 +477,36 @@ input:-webkit-autofill:active {
 
 .add_component_modal {
     .modal-body {
+        .uploaded_input {
+            position: relative;
+            margin-bottom: 10px;
+
+            .remove_btn {
+                position: absolute;
+                top: 0;
+                right: 0;
+                background-color: transparent;
+                border: none;
+                outline: none;
+                width: 24px;
+                height: 24px;
+                padding: 0;
+
+                svg {
+                    path {
+                        stroke: $redclr;
+                    }
+                }
+            }
+
+            >img {
+                width: 100%;
+                height: 100px;
+                background-color: white;
+                object-fit: contain;
+                object-position: center;
+            }
+        }
 
         // Tag list styling
         ul {
