--- a/frontend-from-admin-panel/src/index.scss
+++ b/frontend-from-admin-panel/src/index.scss
@@ -364,6 +364,8 @@ input:-webkit-autofill:active {
                     height: 100px;
                     object-fit: contain;
                     object-position: center;
+                    background-color: white;
+                    border-radius: 0.8rem;
                 }
             }
         }
