--- a/admin-panel/src/index.scss
+++ b/admin-panel/src/index.scss
@@ -91,7 +91,10 @@ input:-webkit-autofill:active {
             overflow: auto;
 
             li {
+                flex-shrink: 0;
+
                 button {
+                    white-space: nowrap;
                     font-size: 1.4rem;
                     font-weight: 500;
                     padding: 0.2rem 0.8rem 0.4rem;
@@ -364,6 +367,8 @@ input:-webkit-autofill:active {
                     height: 100px;
                     object-fit: contain;
                     object-position: center;
+                    background-color: white;
+                    border-radius: 0.8rem;
                 }
             }
         }
